--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -1,1 +1,21 @@
-11
+pipeline {
+    agent any
+
+    stage {
+        stage ('git clone') {
+            steps {
+                echo 'git clone'
+            }
+        }
+        stage ('build') {
+            steps{
+                echo 'build'
+            }
+        }
+        stage ('deploy') {
+            steps{
+                echo 'deploy'
+            }
+        }
+    }
+}
