adding build step

--- a/lect10/Jenkinsfile
+++ b/lect10/Jenkinsfile
@@ -5,8 +5,13 @@
          }
      }
     stages {
-        stage('git clone') {
+        stage('Clone project') {
             git 'https://github.com/boxfuse/boxfuse-sample-java-war-hello.git'
+        }
+    }
+    stages {
+        stage('Build project'){
+            
         }
     }
  }
