--- a/lect10/Jenkinsfile
+++ b/lect10/Jenkinsfile
@@ -5,18 +5,28 @@
          }
      }
     stages {
-        stage('Clone project') {
+        stage{
+        steps('Clone project') {
             git 'https://github.com/boxfuse/boxfuse-sample-java-war-hello.git'
         }
     }
-    stages {
-        stage('Build project'){
+    stage {
+        steps('Build project'){
             sh 'mvn package -f /boxfuse/pom.xml'
         }
     }
-    stages {
-        stage('Build docker image and tag'){
-
+    stage('Build docker image and tag') {
+        steps{
+             sh 'docker build -t boxfuseapp:latest .' 
+             sh 'docker tag boxfuseapp deepevil/boxfuseapp:latest'
         }
     }
+    stage('Publish image to Docker Hub') {      
+        steps {
+        withDockerRegistry([ credentialsId: "dockerHub", url: "" ]) {
+          sh  'docker push deepevil/boxfuseapp:latest'
+        }
+        }
+    }
+ }
  }
